// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> component should render correctly 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuHideFirstRender"
  >
    <div
      className="menuContent"
    >
      <CrossIcon
        className="crossIcon"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <Link
          className="link"
          onClick={[Function]}
          to="/"
        >
          <li
            className="menuItem"
          >
            Home
          </li>
        </Link>
        <Link
          className="link"
          onClick={[Function]}
          to="/about"
        >
          <li
            className="menuItem"
          >
            About
          </li>
        </Link>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<Header/> component when clicking the burgerMenu icon and then clicking a menu item should then close the menu 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuClose menuHideFirstRender"
  >
    <div
      className="menuContent"
    >
      <CrossIcon
        className="crossIcon"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <Link
          className="link"
          onClick={[Function]}
          to="/"
        >
          <li
            className="menuItem"
          >
            Home
          </li>
        </Link>
        <Link
          className="link"
          onClick={[Function]}
          to="/about"
        >
          <li
            className="menuItem"
          >
            About
          </li>
        </Link>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`<Header/> component when clicking the burgerMenu icon should open the sub navigation 1`] = `
<nav
  className="header"
>
  <div
    className="wrapper"
  >
    <ThemeToggle />
    <BurgerMenu
      className="burgerMenu"
      onClick={[Function]}
    />
  </div>
  <div
    className="menuContainer menuOpen menuHideFirstRender"
  >
    <div
      className="menuContent"
    >
      <CrossIcon
        className="crossIcon crossIconShow"
        onClick={[Function]}
      />
      <ul
        className="menuList"
      >
        <Link
          className="link"
          onClick={[Function]}
          to="/"
        >
          <li
            className="menuItem"
          >
            Home
          </li>
        </Link>
        <Link
          className="link"
          onClick={[Function]}
          to="/about"
        >
          <li
            className="menuItem"
          >
            About
          </li>
        </Link>
      </ul>
    </div>
  </div>
</nav>
`;
